# bioreport

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
bioreport/: __init__.py  _base_module.py  _config.py  report_sum.py
bioreport.egg-info/: PKG-INFO  SOURCES.txt
bioreport/modules/bismark/: __init__.py
bioreport/modules/fastp/: fastp.py
dev/: update_install.sh
doc/source/: bioreport.modules.bismark.rst  bioreport.modules.fastp.rst  bioreport.modules.rst  bioreport.rst  conf.py  index.rst  modules.rst  requirements.txt
docs/: index.md
notebooks/: demo.ipynb  test.ipynb
scripts/: gen_ref_pages.py
site/: 404.html  index.html  objects.inv
site/reference/SUMMARY/: index.html
site/reference/bioreport/report/: index.html
site/reference/bioreport/report_sum/: index.html
site/reference/bioreport/search/: index.html
site/search/: search_index.json
src/bioreport/: __init__.py  _base_module.py  _config.py  report.py  report_pattern.toml  report_sum.py  search.py
src/bioreport.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bioreport/_modules/bismark/: bismark.py
src/bioreport/_modules/bowtie2/: __init__.py  bowtie2.py
src/bioreport/_modules/fastp/: fastp.py
